yyamamoto+sesetup@salesforce.com/src/objects/WebToLead_fk_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>BodyBackgroundColor__c</fullName>
        <defaultValue>&quot;fff&quot;</defaultValue>
        <label>BodyBackgroundColor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderBorderColor__c</fullName>
        <defaultValue>&quot;e7e7e7&quot;</defaultValue>
        <label>HeaderBorderColor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelColor__c</fullName>
        <defaultValue>&quot;333&quot;</defaultValue>
        <label>LabelColor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogoSRName__c</fullName>
        <defaultValue>&quot;WebToLeadFKLogo_Default&quot;</defaultValue>
        <label>LogoSRName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PanelBackgroundColor__c</fullName>
        <defaultValue>&quot;F5F5F5&quot;</defaultValue>
        <label>PanelBackgroundColor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PanelBorderColor__c</fullName>
        <defaultValue>&quot;ddd&quot;</defaultValue>
        <label>PanelBorderColor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PanelInsideBackgroundColor__c</fullName>
        <defaultValue>&quot;fff&quot;</defaultValue>
        <label>PanelInsideBackgroundColor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PanelLabelColor__c</fullName>
        <defaultValue>&quot;333&quot;</defaultValue>
        <label>PanelLabelColor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PanelTitle__c</fullName>
        <defaultValue>&quot;資料請求フォーム&quot;</defaultValue>
        <label>PanelTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TabActiveBackgroundColor__c</fullName>
        <defaultValue>&quot;e7e7e7&quot;</defaultValue>
        <label>TabActiveBackgroundColor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TabActiveColor__c</fullName>
        <defaultValue>&quot;E7E7E7&quot;</defaultValue>
        <label>TabActiveColor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TabActiveLabelColor__c</fullName>
        <defaultValue>&quot;555&quot;</defaultValue>
        <label>TabActiveLabelColor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TabBackgroundColor__c</fullName>
        <defaultValue>&quot;F8F8F8&quot;</defaultValue>
        <label>TabBackgroundColor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TabLabelColor__c</fullName>
        <defaultValue>&quot;777&quot;</defaultValue>
        <label>TabLabelColor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TabTitle__c</fullName>
        <defaultValue>&quot;お問合せ&quot;</defaultValue>
        <label>TabTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThanksMsg__c</fullName>
        <defaultValue>&quot;資料をご請求頂きありがとうございます。3営業日以内に担当者からご連絡差し上げます。&quot;</defaultValue>
        <label>ThanksMsg</label>
        <type>TextArea</type>
    </fields>
    <label>WebToLead_fk_Setting</label>
</CustomObject>